tests/error/template_unknown.gw
#! [contains] unknown type
fun void my_function<[A]() { <<< "test" >>>; }

my_function<[unknown_type]();
